--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@next/mdx": "10.0.7",
     "@twilio-paste/core": "6.0.3",
     "@twilio-paste/icons": "4.0.2",
-    "next": "latest",
+    "next": "10.0.7",
     "next-mdx-enhanced": "5.0.0",
     "prop-types": "15.7.2",
     "react": "17.0.1",
