--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
   },
   "dependencies": {
     "@mdx-js/loader": "1.6.22",
-    "@next/mdx": "12.0.2",
-    "@twilio-paste/core": "10.12.0",
-    "@twilio-paste/icons": "5.5.0",
-    "next": "12.0.2",
-    "next-mdx-enhanced": "5.0.0",
-    "prop-types": "15.7.2",
+    "@next/mdx": "12.0.7",
+    "@twilio-paste/codemods": "^0.2.4",
+    "@twilio-paste/core": "10.18.0",
+    "@twilio-paste/icons": "5.9.0",
+    "next": "12.0.7",
+    "prop-types": "15.8.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-uid": "2.3.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {},
   "license": "ISC"
