chore: update dependencies and improve configuration
- Update Next.js to 15.3.0
- Update React to 19.1.0
- Update MDX and related packages
- Update Twilio Paste components
- Move font loading to _document.js
- Improve MDX configuration

--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@mdx-js/loader": "1.6.22",
-    "@next/mdx": "12.3.4",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.0",
     "@twilio-paste/codemods": "0.3.3",
-    "@twilio-paste/core": "19.1.0",
-    "@twilio-paste/icons": "11.0.0",
-    "next": "12.3.4",
+    "@twilio-paste/core": "^21.2.0",
+    "@twilio-paste/icons": "^13.0.1",
+    "next": "^15.3.0",
     "prop-types": "15.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {},
   "license": "ISC"
