--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.19.2",
+    "@algolia/autocomplete-theme-classic": "^1.19.2",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.0",
     "@twilio-paste/codemods": "0.16.0",
     "@twilio-paste/core": "^21.2.0",
     "@twilio-paste/icons": "^13.0.1",
+    "algoliasearch": "^5.26.0",
+    "gray-matter": "^4.0.3",
+    "instantsearch.js": "^4.78.3",
     "next": "^15.3.0",
     "prop-types": "15.8.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-instantsearch": "^7.15.8",
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0"
   },
-  "devDependencies": {},
   "license": "ISC",
   "resolutions": {
     "@babel/traverse": "^7.23.2",
